syntax = "proto3";

message WriteRequest {
    string collection = 1;
    string document = 2;
    map<string, string> fields = 3;

    message Field {
        string key = 1;
        string value = 2;
    }
}






message WriteResponse {
    string message = 1;
    string error = 2;
}

service WriteService {
    rpc WriteData (WriteRequest) returns (WriteResponse);
}
